@@ -1,0 +1,1 @@
+ALTER TABLE `#__modules` CHANGE `position` `position` VARCHAR( 50 ) NOT NULL DEFAULT ''
